--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'Markazi Text';
+    src: url('fonts/Markazi_Text/MarkaziText-VariableFont_wght.ttf') format('truetype');
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+
+
 body {
     background-color: #0d1117;
     color: antiquewhite;
