--- a/src/Core Comps/Animation.css
+++ b/src/Core Comps/Animation.css
@@ -126,3 +126,56 @@
   from {left: -400px;}
   to {left: 0px;}
 }
+
+
+/* Collaspe search */
+
+.search_open {
+  animation: expand 0.6s ease-in forwards;
+  transform-origin: right center;
+}
+.search_closed {
+  animation: expand_reverse 0.6s ease-in forwards;
+  transform-origin: right center;
+}
+
+
+@keyframes expand {
+  from { 
+    transform: scaleX(0);
+    opacity: 0;
+  }
+  to {
+    transform: scaleX(1);
+    opacity: 1;
+  }
+}
+
+@keyframes expand_reverse {
+  from {
+    transform: scaleX(1);
+    opacity: 1;
+  }
+  to {
+    transform: scaleX(0);
+  }
+}
+
+
+/* Animation styles for dropdown indicator */
+@keyframes rotate180 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(180deg);
+  }
+}
+
+.dropdown-arrow {
+  transition: transform 0.3s ease-in-out;
+}
+
+.dropdown-arrow.rotated {
+  transform: rotate(180deg);
+}
